--- a/package.json
+++ b/package.json
@@ -5,14 +5,47 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "nx exec -- echo 'Ran type-check and build-only'",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
+    "test:e2e-working": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "dependsOn": [
+          "type-check",
+          {
+            "target": "build-only",
+            "params": "forward"
+          }
+        ]
+      },
+      "test:e2e": {
+        "dependsOn": [
+          {
+            "target": "build",
+            "params": "ignore"
+          }
+        ]
+      },
+      "test:e2e-working": {
+        "dependsOn": [
+          {
+            "target": "type-check"
+          },
+          {
+            "target": "build-only",
+            "params": "ignore"
+          }
+        ]
+      }
+    }
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -40,6 +73,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.11"
+    "vue-tsc": "^2.0.11",
+    "nx": "19.0.6"
   }
 }
