--- a/package.json
+++ b/package.json
@@ -5,14 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
+    "build": "nx exec -- echo 'Ran type-check and build-only'",
+    "preview": "nx vite:preview",
+    "test:unit": "nx test",
     "test:e2e": "playwright test",
-    "build-only": "vite build",
+    "build-only": "nx vite:build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "dependsOn": [
+          "type-check",
+          {
+            "target": "build-only",
+            "params": "forward"
+          }
+        ]
+      }
+    }
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -20,6 +33,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nx/vite": "19.0.6",
+    "@nx/vue": "19.0.6",
+    "@nx/web": "19.0.6",
     "@playwright/test": "^1.43.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
@@ -27,6 +43,7 @@
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/ui": "^1.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
@@ -36,6 +53,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
+    "nx": "19.0.6",
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
