--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,13 @@
         "previewTargetName": "vite:preview",
         "serveStaticTargetName": "serve-static"
       }
+    },
+    {
+      "plugin": "@nx/eslint/plugin",
+      "options": {
+        "targetName": "eslint:lint",
+        "extensions": ["ts", "tsx", "js", "jsx", "html", "vue"]
+      }
     }
   ]
 }
