--- a/package.json
+++ b/package.json
@@ -33,16 +33,21 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nx/js": "19.0.6",
     "@nx/vite": "19.0.6",
     "@nx/vue": "19.0.6",
     "@nx/web": "19.0.6",
     "@playwright/test": "^1.43.0",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
