--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "files": [],
+  "compilerOptions": {},
   "references": [
     {
       "path": "./tsconfig.node.json"
@@ -10,5 +11,6 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "extends": "./tsconfig.base.json"
 }
