--- a/modules/products/project.json
+++ b/modules/products/project.json
@@ -5,5 +5,9 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project products --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "command": "nx vite:build"
+    }
+  }
 }
