--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,12 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "products": [
-        "modules/products/src/index.ts"
-      ]
+      "@/*": ["./src/*"],
+      "products": ["modules/products/src/index.ts"]
     }
   }
 }
